static/css/s2.css
/* ... */
.readerNavMenu .content {
  position: relative;
  box-sizing: border-box;
  padding: 30px 10px 10px;
  height: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  font-size: 14px;
}
.singlePanel .readerNavMenu .content {
  top: 58px;
  height: calc(100% - 58px);
}
.interface-hebrew.multiPanel .readerNavMenu .content {
  padding-right: 40px;
}
.multiPanel .readerNavMenu .content {
  padding: 30px 30px 70px 30px;
}
.multiPanel .readerNavMenu.noHeader .content {
  padding-top: 70px;
}
.multiPanel .readerNavMenu.noHeader.compare .content {
  padding-top: 80px;
}
.readerNavMenu .content .contentInner {
  max-width: 660px;
  margin: 0 auto;
}
.readerNavTop {
  position: absolute;
  width: 100%;
  background-color: #F9F9F7;
  border-bottom: 1px solid #E2E2E1;
  box-sizing: border-box;
  height: 58px;
  direction: ltr;
  z-index: 1;
  padding: 0px 30px;
  vertical-align: middle;
  line-height: 58px;
}
.singlePanel .readerNavTop {
  padding: 0 10px;
}
.readerNavTop.colorLineOnly {
  height: auto;
  border-bottom: none;
  padding: 0;
}
.readerPanel .readerNavTop h2 {
  margin-bottom: 0px;
  font-weight: 400;
  color: black;
  line-height: 38px;
}
.readerNavTop.search {
}
.readerNavMenu .readerSearch {
  margin: 0;
  width: 60%;
  box-sizing: border-box;
  border: none;
  background-color: inherit;
  font-size: 18px;
  font-family: "adobe-garamond-pro", Georgia;
  height: 48px;
  margin-top: 9px;
}
.readerNavMenu .readerSearch:focus {
  outline: 0;
}
.readerNavTop .readerNavMenuSearchButton,
.readerNavTop .readerNavMenuCloseButton,
.readerNavTop .readerNavMenuMenuButton,
.readerNavTop .readerOptions {
  text-align: left;
  width: 40px;
  height: 48px;
  margin-top: 5px;
  box-sizing: border-box;
  color: #BFBFBF;
  float: left;
  font-size: 20px;
  vertical-align: middle;
  cursor: pointer;
}
.readerNavTop .readerNavMenuCloseButton{
  font-size: 46px;
  padding: 0;
  line-height: 48px;
}
.readerNavTop .readerOptions {
  float: right;
  text-align: right;
}
.sefariaLogo img {
  width: 110px;
}
.readerNavTop .sefariaLogo img {
  vertical-align: middle;
}
.readerNavMenu h1 {
  text-align: center;
  color: #333;
  height: 70px;
  position: relative;
  font-size: 26px;
  font-weight: lighter;
  letter-spacing: 1px;
  margin: 0 0 10px 0;
}
h1 .languageToggle {
  position: absolute;
  right: 0;
  color: #ccc;
  display: block;
  width: 38px;
  height: 32px;
  border: 1px solid #ccc;
  border-radius: 4px;
  line-height: 34px;
  cursor: pointer;
}
h1 div.languageToggle .en {
  font-family: "Taamey Frank", "Times New Roman", serif;
  font-weight: normal;
}
h1 .languageToggle .he {
  font-family: "adobe-garamond-pro", Georgia, serif;
  font-size: 22px;
}
.readerNavMenu h1 .int-en {
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.readerNavMenu h1 .int-he {
  font-family: "Taamey Frank", "Times New Roman", serif;
}
@media (max-width: 450px) {
  .readerNavMenu.home .tagline {
    margin-top: 29px;
    height: 60px;
  }
  .readerNavMenu .tagline .en {
    font-size: 19px;
  }
  .readerNavMenu .tagline .he {
    font-size: 20px;
  }
}
.readerNavMenu .navToggles {
  text-align: center;
  margin-bottom: 40px;
  margin-top: -10px;
}
.readerNavMenu .navToggles .navTogglesDivider {
  color: #ccc;
}
.readerNavMenu .navToggle {
  margin: 0 10px;
  display: inline-block;
  text-align: right;
  text-transform: uppercase;
  color: #999;
  font-size: 11px;
  font-weight: lighter;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  letter-spacing: 1px;
  cursor: pointer;
}
.readerNavMenu .navToggle.second {
  text-align: left;
}
.readerNavMenu .navToggle.active {
  color: black;
}
.readerPanel h2, .readerPanel h3 {
  text-transform: uppercase;
  text-align: center;
  font-size: 15px;
  font-weight: 200;
  color: #999;
  margin-bottom: 20px;
  letter-spacing: 2px;
  height: 16px;
  line-height: 16px;
}
.readerPanel h2 .en, .readerPanel h3 .en {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerPanel h2 .he, .readerPanel h3 .he {
  font-family: "Open Sans Hebrew", sans-serif;
}
.readerNavSection h2 {
  font-size: 13px;
  font-weight: normal;
  margin-bottom: 24px;
}
.readerNavSection {
  margin-bottom: 44px;
}
a.recentItem,
a.resourcesLink {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}
.readerNavCategories {
  width: 100%;
}
.readerNavCategories .threeBox td {
}
.readerNavCategories a {
  color: #333;
}
.readerNavCategories a:hover {
  text-decoration: none;
}
.readerNavCategory {
  background-color: white;
  text-transform: uppercase;
  font-family: "adobe-garamond-pro", Georgia;
  text-align: center;
  font-size: 15px;
  padding: 0 10px;
  margin: 0;
  cursor: pointer;
  border-top: 4px solid transparent;
  letter-spacing: 1px;
  height: 46px;
  line-height: 46px;
}
@media (max-width: 450px) {
  .readerNavCategory {
    margin: 2px;
    font-size: 13px;
  }
}
.readerNavMenu .readerNavMore img {
  height: 10px;
  width: 10px;
  opacity: 0.43;
}
.bilingual .readerNavCategory .he {
  display: none;
}
.bilingual .readerNavMenu .he {
  display: none;
}
.readerNavCalendar {
  margin-bottom: 30px;
  margin-top: -8px;
}
.blockLink,
.readerNavMenu .resourcesLink {
  display: inline-block;
  color: black;
  background-color: white;
  text-align: center;
  color: #333;
  font-size: 16px;
  border-top: 4px solid transparent;
  width: 100%;
  cursor: pointer;
  height: 46px;
  vertical-align: middle;
  margin: 0;
  box-sizing: border-box;
  padding:  8px 8px;
}
.blockLink:hover {
  color: #333;
}
.blockLink + .blockLink {
  margin: 5px 0;
}
.gridBox {
  table-layout: fixed;
}
.gridBox td {
  border: 3px solid transparent;
}
.english .gridBox td:first-child {
  border-left: 0;
}
.english .gridBox td:last-child {
  border-right: 0;
}
.hebrew .gridBox td:first-child {
  border-right: 0;
}
.hebrew .gridBox td:last-child {
  border-left: 0;
}
/* ... */

